SERVER-35770 Running a multi-statement transaction when all WiredTiger write tickets are exhausted may lead to deadlock

(cherry picked from commit 210bb5d91cb3c77bb3ed169114f8b85cd1062fb3)